--- a/HotelManagementSystem.Server/appsettings.json
+++ b/HotelManagementSystem.Server/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "SuperSecretKeyChangeThisInProduction",
+    "Issuer": "HotelSystem",
+    "Audience": "HotelUsers",
+    "ExpireMinutes": 60
+  }
 }
